--- a/curs3/ap1.html
+++ b/curs3/ap1.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        h2{
+            color: green;
+        }
+    </style>
+    <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
 
+    <h1 style="color: red;font-size: 40px;">Primul titlu cu HTML si CSS</h1>
+    <h2>Subtitlu</h2>
+    <h2 style="color: #dedede;">Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <h2>Subtitlu</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto atque accusantium eveniet aut? Beatae id nam natus delectus amet doloribus eos rerum earum, quod cumque expedita doloremque quasi suscipit magni.</p>
+    <p>Totam autem dolores dignissimos laborum? Voluptatum magnam fugiat exercitationem tenetur voluptas nobis, illo quis suscipit saepe nisi doloribus dolorem quod et consequatur nesciunt nostrum, eaque a, reprehenderit dolor. Praesentium, delectus.</p>
+    <p>Repellendus recusandae accusantium consequuntur dignissimos aperiam debitis vitae pariatur ex ratione, sed reprehenderit odit error obcaecati quibusdam eaque natus maxime doloremque sint. Qui, animi. Facere ipsa deserunt adipisci minus tenetur!</p>
+    <p>Iusto suscipit tempore unde! Sint nemo voluptatem ullam delectus animi error at nostrum impedit aut quidem adipisci tenetur a reprehenderit eaque doloribus laudantium quae officia, cumque perspiciatis voluptatibus quam ad!</p>
+    <p>Incidunt autem, reiciendis itaque quam praesentium natus rem iusto sunt placeat voluptate eos enim fugiat tenetur unde, modi molestias similique minus nemo illo illum ipsa exercitationem a suscipit obcaecati! Animi?</p>
+
+</body>
+</html>
