--- a/curs4/ap1.html
+++ b/curs4/ap1.html
@@ -1,1 +1,50 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        table td {
+            border: 2px solid #4423aa;
+            padding: 10px;
+        }
+
+        tr:nth-child(2n) {
+            background-color: bisque;
+        }
+
+        tr:nth-child(2n+1) {
+            background-color: aquamarine;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Primul tabel</h1>
+    <table>
+        <tr>
+            <td>Nr.curent</td>
+            <td>Nume</td>
+            <td>Prenume</td>
+            <td>Telefon</td>
+        </tr>
+
+        <tr>
+            <td>1</td>
+            <td>Popescu</td>
+            <td>Ion</td>
+            <td>0764892322</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Marian</td>
+            <td>Stan</td>
+            <td>0756667886</td>
+        </tr>
+    </table>
+
+</body>
+
+</html>
