--- a/curs5/ap1.html
+++ b/curs5/ap1.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/ap1.css">
+</head>
+<body>
+    <div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sequi est consectetur modi expedita eligendi distinctio, hic iste mollitia maiores quod illum voluptatibus at officiis nisi fuga qui eum, quisquam voluptatum?</p>
+        <p>Laboriosam, similique aut animi commodi assumenda reprehenderit maxime, corrupti alias nisi sint dolor atque deleniti aspernatur. Modi quos animi dolore, impedit ea ipsam deserunt, culpa, amet quam temporibus alias debitis.</p>
+        <p>Pariatur, iure? Nostrum laboriosam quidem deleniti, fugit est non, quas corporis tempora facere, repellat magnam odit temporibus quibusdam magni sint nesciunt provident ipsa dolore accusantium laudantium nihil maxime placeat. At?</p>
+    </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fuga iusto vero accusantium facilis illo, magnam facere deleniti mollitia praesentium soluta esse vel distinctio ab laborum rem et atque officia sapiente.</p>
+        <p>Minima quisquam asperiores blanditiis dolor a sunt consequatur sed magnam earum cumque commodi ullam repudiandae, doloribus vero quidem in amet voluptates iure facilis. Eius maiores repudiandae rem, eveniet dolorem optio!</p>
+        <p>Et rerum voluptatibus eos eius fugit voluptates sequi ipsa, quis nesciunt mollitia quaerat cum, harum aperiam reprehenderit omnis est amet neque. Labore, neque aliquid officia fugiat ipsam facere distinctio debitis!</p>
+    </div>
+</body>
+</html>
