--- a/curs6/ap1.html
+++ b/curs6/ap1.html
@@ -1,1 +1,51 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        div{
+            width: 300px;
+            float: left;
+            border: 2px solid red;
+            margin: 10px;
+            padding: 20px;
+
+        }
+
+        #div2{
+           visibility: hidden;
+        }
+
+        #p1{
+            color: red;
+        }
+
+       .p1{
+        color: blue;
+           }
+    </style>
+</head>
+<body>
+    <div>
+        <p class="p1" id="p1" style="color: green;">1.Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, et laboriosam. Obcaecati facere quo maiores voluptatibus rerum sint dignissimos inventore tenetur sed commodi. Optio eius eaque culpa ullam provident nihil?</p>
+        <p>Dolorum expedita quod quas eaque, vero recusandae illo harum enim? Alias fugit nemo doloremque voluptates ipsam vitae qui quibusdam eius quo, modi nulla distinctio deserunt totam blanditiis ad, facere dignissimos?</p>
+        <p>Saepe officia reiciendis illo voluptas laboriosam exercitationem. Quos fugit accusamus, dicta officiis quas nulla, natus doloribus repellendus sapiente aspernatur non quam. Unde qui numquam voluptatibus quis hic odio, ipsam assumenda?</p>
+        <p>Quos neque totam eum debitis voluptatum dolorum earum sequi omnis natus nulla. Laboriosam odio ducimus, necessitatibus iure enim iusto reprehenderit ea reiciendis perspiciatis error est quae dolorem non quia repudiandae?</p>
+    </div>
+    <div id="div2">
+        <p>2.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem doloribus unde sed deserunt, dolor dignissimos eos necessitatibus, asperiores facilis maxime quasi possimus deleniti! Debitis repellat aliquid incidunt nihil voluptas error.</p>
+        <p>Maxime esse, dolor et, ab perferendis earum asperiores quas impedit repellendus quisquam totam voluptatum dolorum eveniet voluptatibus dolorem distinctio iure accusantium soluta exercitationem nam, qui perspiciatis? Animi aspernatur perferendis vitae.</p>
+        <p>Magni dignissimos iste officiis iure numquam doloribus consequatur! Nesciunt, nam quo! Quos ullam sed voluptates consectetur nostrum quae at, eius fugit, magnam illum sequi. Reprehenderit fugiat corporis sapiente rerum modi?</p>
+        <p>Quibusdam ab sit accusamus, beatae corporis voluptates ipsum delectus dolorum facilis sequi quis labore, velit magnam? Est corrupti, esse deserunt amet accusantium vero, impedit quas facilis ullam excepturi tempora aperiam!</p>
+    </div>
+    <div>
+        <p>3.Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia nulla sapiente est fugit cum sequi deserunt qui? Hic, est ipsum? Non, illum dolor? Harum ratione sunt inventore explicabo quidem dolore.</p>
+        <p>Iusto inventore non nihil quibusdam eveniet possimus aperiam dolore enim ab tempora iste ea repellendus corporis quidem quo molestiae, id sunt consequatur cupiditate. Tenetur excepturi laboriosam consequuntur rerum dolores ipsum.</p>
+        <p>Adipisci magni animi repellat maiores blanditiis dolorem quo ipsum beatae totam doloremque facere, perspiciatis quas nulla debitis explicabo eius ipsam nisi harum? Tenetur fugit neque rem voluptatum numquam facere quam.</p>
+        <p>Tenetur expedita debitis id error possimus aperiam consectetur! Inventore odit praesentium illo? Harum, possimus amet ab repudiandae reiciendis, numquam expedita incidunt ducimus libero voluptas labore eos totam itaque ad autem?</p>
+    </div>
+</body>
+</html>
