--- a/curs7/ap1.html
+++ b/curs7/ap1.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        p>span{
+            font-weight: bold;
+        }
+        p>samp{
+            font-style: italic;
+        }
+    </style>
+</head>
+<body>
+    <p><b>Lorem ipsum dolor</b> sit amet consconsectetur adipisicing elitectetur adipisicing elit. <strong> Reiciendis, quas! Nihil,</strong> quisquam <span> nisi ad neque doloremque</span> recusandae architecto inventore dolore quasi dignissimos soluta. Temporibus nulla et dolorum, saepe impedit tenetur.</p>
+    <p><i>Lorem ipsum dolor</i>  sit amet <em>consectetur adipisicing elit</em>. Laudantium, <samp>eligendi tempore enim</samp> dolores libero, eos at voluptate quae voluptates ea nemo rerum consequuntur labore ab, est veniam. Labore, temporibus doloremque?</p>
+    <p><del>Lorem ipsum dolor</del> sit amet <s>consectetur adipisicing elit</s>. Dolorum eum reprehenderit voluptates incidunt culpa quas consequuntur sapiente repellendus nihil, quod aliquid fugiat quam, ullam aperiam minima, amet porro tempora similique.</p>
+</body>
+</html>
