--- a/proiect/acasa.html
+++ b/proiect/acasa.html
@@ -1,1 +1,107 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="./assets/css/styles.css">
+        <title>CSS Grid Site</title>
+        <meta name="description" content="Aplicatie Acasa">
+        <meta name="keywords" content="curs2, link-academy">
+        <meta name="author" content="Ilie Alexandru">
+    
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
+        <link rel="manifest" href="site.webmanifest">
+        <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="aplication_TitleColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">  
+        <style>
+            .divacasa{
+                max-width: 400px;
+                background-color: aqua;
+                float: left;
+                border: 5px solid blue;
+                margin: 15px;
+                padding: 10px;
+            }
+            #main-footer{
+                width: 100%;
+                float: left;
+            }
+        </style>
+    </head>
 
+    <body>
+        <!-- Header Showcase -->
+        <header id="showcase" class="grid">
+            <div class="bg-image"></div>
+            <div class="content-wrap">
+            </div>
+        </header>
+        <nav>
+            <ul>
+                <li class="Active"><a href="acasa.html">Acasa</a></li>
+                <li><a href="portofoliu.html">Portofoliu</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="despre-noi.html">Despre noi</a></li>
+                <li><a href="contact.html">Contact</a></li> 
+            </ul>
+        </nav>
+
+        <!-- Main Area -->
+        <main id="main">
+            <!-- Section A -->
+            <section id="section-a" class="grid">
+            </section>
+
+            <!-- Section B -->
+            <section id="section-b" class="grid">
+                <ul>
+                    <li>
+                        Linia 1
+                    </li>
+                    <li>
+                        Linia 2
+                    </li>
+                    <li>
+                        Linia 3
+                    </li>
+                </ul>
+            </section>
+
+            <div class="divacasa">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum architecto obcaecati iure eaque ea omnis nam est aperiam laboriosam maiores optio blanditiis modi reiciendis, sed temporibus labore? Repellat, non eligendi.</p>
+                <p>Reprehenderit ducimus voluptatem cum corporis asperiores, eos vitae, nobis totam odio cumque nisi non molestias blanditiis mollitia sit libero? Rem asperiores facere delectus, aliquid accusantium sed quos vero officiis recusandae!</p>
+                <p>Dolorum ducimus vel ut, ad similique, ea natus minus, nobis omnis vitae pariatur porro eum aut? Nesciunt, incidunt sapiente! Cumque eius quis perspiciatis dolor. Provident dicta et atque architecto odio.</p>
+                <p>Molestias enim dolor ipsa, quas nobis blanditiis nostrum animi, dolore facilis repudiandae, placeat debitis. Corporis eaque vel quas, aperiam, incidunt magnam placeat ea alias omnis rem distinctio sint, nisi molestiae.</p>
+            </div>
+            <div class="divacasa">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim adipisci rem facere nostrum ab, vero fuga iure repellendus saepe nam. Hic aut, repellendus assumenda voluptas iste quasi saepe maiores exercitationem.</p>
+                <p>Numquam debitis fugiat ab totam facilis, illum aliquid rerum perferendis ipsam consectetur in commodi, nam est porro? Consequuntur temporibus quis ea voluptatum minima saepe error veritatis, illo exercitationem! Dolore, corporis.</p>
+                <p>Blanditiis illo facilis quo nemo exercitationem sapiente quis ad cum dolorum illum numquam provident aut natus et, sunt quaerat possimus temporibus, nostrum deserunt? Et ut in omnis reprehenderit nihil quis!</p>
+                <p>Fugiat beatae assumenda tempora iure, expedita sapiente illum odit accusamus aliquid corporis error ad veritatis suscipit sunt laudantium, natus libero? Quo, animi expedita ut quos eum provident exercitationem officia qui.</p>
+            </div>
+            <div class="divacasa">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem quo quidem enim autem quos soluta, facere delectus, illo vel pariatur alias obcaecati voluptatum eaque consequuntur nisi, natus minima reiciendis. Vitae!</p>
+                <p>Quidem, libero deserunt molestiae consectetur et modi blanditiis aliquid sunt iure qui fugiat, eveniet dignissimos ut quam! Molestiae, quisquam quae iste placeat, aspernatur dolorum suscipit exercitationem ut delectus, dolores tenetur!</p>
+                <p>Ipsum sequi aliquid deserunt nostrum nemo assumenda repudiandae dicta et repellat ut expedita, id quisquam neque consectetur animi, ex commodi obcaecati eaque perferendis, exercitationem cupiditate. Voluptates dignissimos veniam harum consectetur.</p>
+                <p>Eligendi laudantium in pariatur itaque, dicta sed autem a est iste unde ut doloribus quaerat voluptatem excepturi accusantium similique magni impedit, blanditiis velit cumque quibusdam nesciunt fuga!</p>
+            </div>
+
+            <!-- Section C -->
+            <section id="section-c" class="grid">
+            </section>
+
+            <!-- Section D -->
+            <section id="section-d" class="grid">
+            </section>
+        </main>
+        <!-- Footer -->
+        <footer id="main-footer" class="grid">
+            <div>My Project</div>
+            <div>Project By <a href="" target="_blank">LinkAcademy</a></div>
+        </footer>
+    </body>
+</html>
